# diSBPred

./: .gitignore  Dockerfile  Install_pyenv_poetry.sh  Largefile.txt  ReadMe.md  buildDocker.sh  download_dataset.sh  download_largefiles.sh  install_dependencies.sh  pyproject.toml  run_diSBPred.sh  run_diSBPred_Docker.sh
Dataset/: list_1859_Uniprot_Cutoff25_33_Intra_Cutoff25_Combined_Cutoff25_TotalProts1866.txt
Input/: id_list.txt  input.txt
Output/: DP000011.predict  DP000012.predict  example.predict
Scripts/: Combined_Features.ipynb  CreateWindowsForCysteinePairForCombinedData.java  CreateWindowsForSingleCysteineForCombinedData.java  LightGBM_CollectIndividualCysProb_ws31.py  Stacking_CysPairLoadModel_Test_ws13.py  parseFasta.py  singlecys_collectindivcysprob_ws31.model  singlecys_collectindivcysprob_ws31.scaler
Scripts/CombFeatures/: example.61features
Scripts/CysPairWindowedFiles_IncCysProb/: example_cyspair_incsingcysprob_ws_13.txt
Scripts/IndividualCysPredictionProb/: example.predict
Scripts/Predictions_IncSingCysProb_5folddata/: example.predict
Scripts/SingleCysWindowedFile/: DP00007_singlecys_W_31.txt
Tools/BalancedSSP/: QuickRunGuidelines  ReadMe
Tools/DisPredict_v2.0/: ReadMe
Tools/DisPredict_v2.0/Software/: ReadMe
Tools/libsvm-3.17/Temp/: libSVMInputFile_short.txt  libSVMTestFile_short.txt  out_file.txt  scale_range  test_file.predict  test_file.scale  train_file.scale  train_file.scale.model
Tools/libsvm-3.17/data/: libSVMInputFile.scale  libSVMInputFile.txt  libSVMInputFileUptoPP_sample.scale  libSVMInputFileUptoPP_sample.txt
(+241 files in other folders)
