[tool.poetry]
name = "disbpred"
version = "0.1.0"
description = ""
authors = ["Md Wasi Ul Kabir <mkabir3@uno.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
ipykernel = "^6.25.1"
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
mlxtend = "^0.22.0"
imblearn = "^0.0"
biopython = "^1.83"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
